--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Barbearia Alura</title>
+        <title>Barbearia do paulão</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
